--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+<!--     <script>You need to enable JavaScript to run this app.</script> -->
     <div id="root"></div>
 </body>
 
